--- a/UBC-Course-Table.css
+++ b/UBC-Course-Table.css
@@ -60,3 +60,9 @@
     margin-bottom: 0px !important;
     margin-right: 10px;
 }
+
+.div-inline{
+    display:inline-block;
+    margin-right: 10px;
+    padding-bottom: 10px;
+}
